optimized the flow generating scrip to use AMP

--- a/optical_flow_convert.ipynb
+++ b/optical_flow_convert.ipynb
@@ -10,8 +10,10 @@
     "from torchvision.io.video import read_video\n",
     "from torchvision.models.optical_flow import raft_large, Raft_Large_Weights, raft_small, Raft_Small_Weights\n",
     "from torchvision.transforms.functional import resize\n",
+    "import torchvision.transforms as T\n",
     "from torchvision.utils import flow_to_image\n",
     "from torch.utils.data import Dataset, DataLoader\n",
+    "# from torch.cuda.amp import autocast\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "from pathlib import Path\n",
@@ -1058,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1088,14 +1090,24 @@
     "        prev_frame = self.vid[idx]\n",
     "        curr_frame = self.vid[idx + 1]\n",
     "        return prev_frame, curr_frame\n",
-    "    \n",
-    "# Preprocessing function (based on RAFT's input expectations)\n",
-    "def preprocess_frame(frame):\n",
-    "    frame_tensor = frame.float() / 255.0  # Normalize to [0, 1]\n",
-    "    frame_resized = resize(frame_tensor, size=[496, 888])  # Resize to match RAFT expectations 500, 892 ->  496, 888\n",
-    "    return frame_resized.unsqueeze(0)  # Add batch dimension and move to device\n",
     "\n",
-    "def process_single_video(video_path, model, output_dir):\n",
+    "\n",
+    "\n",
+    "# Preprocessing function (based on RAFT's input expectations)\n",
+    "# def preprocess_frame(frame):\n",
+    "#     frame_tensor = frame.float() / 255.0  # Normalize to [0, 1]\n",
+    "#     frame_resized = resize(frame_tensor, size=[496, 888])  # Resize to match RAFT expectations 500, 892 ->  496, 888\n",
+    "#     return frame_resized.unsqueeze(0)  # Add batch dimension and move to device\n",
+    "\n",
+    "preprocess = T.Compose([\n",
+    "    T.ConvertImageDtype(torch.float32),\n",
+    "    T.Resize([496, 888]),\n",
+    "])\n",
+    "\n",
+    "def preprocess_frame(frame):\n",
+    "    return preprocess(frame).unsqueeze(0)  # Preprocess and add batch dimension\n",
+    "\n",
+    "def process_single_video(video_path, model):\n",
     "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    \n",
     "    # Load the dataset\n",
@@ -1115,16 +1127,21 @@
     "        batch_prev_tensor = torch.stack([preprocess_frame(f).to(device) for f in prev_frames]).squeeze(1)\n",
     "        batch_curr_tensor = torch.stack([preprocess_frame(f).to(device) for f in curr_frames]).squeeze(1)\n",
     "\n",
-    "        with torch.no_grad():\n",
-    "            # Predict optical flows\n",
-    "            flow_list = model(batch_prev_tensor, batch_curr_tensor)\n",
-    "            predicted_flows = flow_list[-1]  # Final output\n",
+    "        with torch.no_grad(): \n",
+    "            with torch.autocast(device_type=\"cuda\"):\n",
+    "                # Predict optical flows\n",
+    "                flow_list = model(batch_prev_tensor, batch_curr_tensor)\n",
+    "                predicted_flows = flow_list[-1]  # Final output\n",
     "\n",
     "        # Convert optical flows to RGB and write to video\n",
     "        for flow in predicted_flows:\n",
     "            flow_image = flow_to_image(flow.squeeze(0)).cpu().numpy().transpose(1, 2, 0)  # (496, 888, 3)\n",
     "            flow_image_bgr = cv2.cvtColor(flow_image.astype(np.uint8), cv2.COLOR_RGB2BGR)  # Convert to BGR for OpenCV\n",
     "            out.write(flow_image_bgr)\n",
+    "\n",
+    "        # # Clear tensors and free memory\n",
+    "        # del batch_prev_tensor, batch_curr_tensor, flow_list, predicted_flows\n",
+    "        # torch.cuda.empty_cache()\n",
     "\n",
     "    # Release resources\n",
     "    out.release()\n",
@@ -1163,7 +1180,7 @@
     "\n",
     "    for video_path in video_paths:\n",
     "        print(f\"Processing video: {video_path}\")\n",
-    "        process_single_video(video_path, model, output_dir)\n",
+    "        process_single_video(video_path, model)\n",
     "\n",
     "        # Optionally compress the video after processing\n",
     "        input_vid = \"temp.avi\"\n",
