1. used interval for frames after clipping 2. add logging & save model 3. test different training parameters

--- a/s3d.ipynb
+++ b/s3d.ipynb
@@ -28,7 +28,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# issues:\n",
+    "# Resolved 1. model is not training\n",
+    "# Resolved 2. when batch size more than 1 need to constict the number of frames\n",
+    "# Resolved 3. crop a small amount then resize\n",
+    "# 4. train using adversial data like black box attacks (random noise)\n",
+    "# Resolved 5. use interval for frames after clipping\n",
+    "# Resolved 6. add logging & save model\n",
+    "# 7. not whole dataset is used currently only testing samples\n",
+    "\n",
+    "# optical flow\n",
+    "# 1. resize to 256,256\n",
+    "# 2. limit frames to 10s\n",
+    "# 3. sample using interval 15 frames per 1s = 150 frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -555,15 +576,22 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load the RAFT model with pre-trained weights\n",
-    "model = s3d(weights=S3D_Weights.DEFAULT)\n",
-    "model.eval()"
+    "# # Load the RAFT model with pre-trained weights\n",
+    "# model = s3d(weights=S3D_Weights.DEFAULT)\n",
+    "# model.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grid search sample size"
    ]
   },
   {
@@ -575,29 +603,126 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input Shape: torch.Size([3, 3, 180, 256, 256])\n",
+      "Input Shape: torch.Size([3, 3, 150, 256, 256])\n",
       "label Shape: torch.Size([3])\n",
       "Epoch 1/1\n",
-      "Time Taken: 434.44816613197327\n",
-      "138/138 - train_loss: 0.7417 - train_accuracy: 60.1449%                 - val_loss: 0.7280 - val_accuracy: 50.0000%\n",
-      "test performance: (0.7279750347137451, 0.5)\n"
+      "138/138 - Time Taken: 472.832745552063 - train_loss: 0.8223 - train_accuracy: 54.1063% - val_loss: 0.6396 - val_accuracy: 69.2308%\n"
      ]
     }
    ],
    "source": [
-    "# Run selected model\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "dataset_path = \"data\"\n",
-    "batch_size = 3 #3 -> est 0.25s per step\n",
+    "batch_size = 3\n",
     "epochs = 1\n",
-    "train_s3d(dataset_path,batch_size,device,epochs)\n",
-    "\n",
-    "# issues:\n",
-    "# Resolved 1. model is not training\n",
-    "# Resolved 2. when batch size more than 1 need to constict the number of frames\n",
-    "#   - use a collate function to use the minimum/fixed number of frames in batch\n",
-    "# Resolved 3. crop a small amount then resize\n",
-    "# 4. train using adversial data like black box attacks (random noise)"
+    "train_s3d(dataset_path,batch_size,device,epochs) # 5GB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Shape: torch.Size([3, 3, 100, 256, 256])\n",
+      "label Shape: torch.Size([3])\n",
+      "Epoch 1/1\n",
+      "138/138 - Time Taken: 334.89113879203796 - train_loss: 0.7019 - train_accuracy: 63.5266% - val_loss: 0.6262 - val_accuracy: 66.3462%\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_path = \"data\"\n",
+    "batch_size = 3\n",
+    "epochs = 1\n",
+    "train_s3d(dataset_path,batch_size,device,epochs) # 4GB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Shape: torch.Size([3, 3, 60, 256, 256])\n",
+      "label Shape: torch.Size([3])\n",
+      "Epoch 1/1\n",
+      "138/138 - Time Taken: 244.2112157344818 - train_loss: 0.7697 - train_accuracy: 61.8357% - val_loss: 0.8672 - val_accuracy: 62.5000%\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_path = \"data\"\n",
+    "batch_size = 3\n",
+    "epochs = 1\n",
+    "train_s3d(dataset_path,batch_size,device,epochs) # 3GB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Search batch size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training size: 414\n",
+      "Validation size: 104\n",
+      "Input Shape: torch.Size([4, 3, 150, 256, 256])\n",
+      "label Shape: torch.Size([4])\n",
+      "Epoch 1/1\n",
+      "104/104 - Time Taken: 476.6902725696564 - train_loss: 0.6867 - train_accuracy: 60.3865% - val_loss: 0.6363 - val_accuracy: 70.1923%\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_path = \"data\"\n",
+    "batch_size = 4 \n",
+    "epochs = 1\n",
+    "train_s3d(dataset_path,batch_size,device,epochs) # 6.5GB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training size: 414\n",
+      "Validation size: 104\n",
+      "Input Shape: torch.Size([5, 3, 150, 256, 256])\n",
+      "label Shape: torch.Size([5])\n",
+      "Epoch 1/1\n",
+      "83/83 - Time Taken: 474.66077041625977 - train_loss: 0.7348 - train_accuracy: 53.8647% - val_loss: 0.6217 - val_accuracy: 72.1154%\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_path = \"data\"\n",
+    "batch_size = 5\n",
+    "epochs = 1\n",
+    "train_s3d(dataset_path,batch_size,device,epochs) # 7.5GB"
    ]
   }
  ],
