--- a/s3d.ipynb
+++ b/s3d.ipynb
@@ -32,6 +32,7 @@
     "# Resolved 5. use interval for frames after clipping\n",
     "# Resolved 6. add logging & save model\n",
     "# 7. not whole dataset is used currently only testing samples\n",
+    "# Resolved 8. save logged results in pth file\n",
     "\n",
     "# optical flow\n",
     "# 1. resize to 256,256\n",
