1. loads whole dataset instead of test set 2. updated optical flow script to use same dimensions as s3d

--- a/optical_flow_convert.ipynb
+++ b/optical_flow_convert.ipynb
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1079,9 +1079,20 @@
    "source": [
     "# Custom Dataset class for video frames\n",
     "class VideoFrameDataset(Dataset):\n",
-    "    def __init__(self, video_path):\n",
+    "    def __init__(self, video_path, transform):\n",
     "        self.video_path = video_path\n",
     "        self.vid, _, _ = read_video(video_path, output_format=\"TCHW\", pts_unit='sec')\n",
+    "\n",
+    "        # Clip frames to the fixed number `max_frames`\n",
+    "        self.max_frames = 300\n",
+    "        self.vid = self._clip_frames(self.vid)\n",
+    "\n",
+    "        # sample n number of frames from clipped video\n",
+    "        self.n_frames = 150\n",
+    "        self.vid = self._sample_frames(self.vid)\n",
+    "\n",
+    "        self.vid = transform(self.vid)\n",
+    "        # print(self.vid.shape)\n",
     "    \n",
     "    def __len__(self):\n",
     "        return self.vid.shape[0] - 1  # Last frame has no next frame\n",
@@ -1090,7 +1101,27 @@
     "        prev_frame = self.vid[idx]\n",
     "        curr_frame = self.vid[idx + 1]\n",
     "        return prev_frame, curr_frame\n",
-    "\n",
+    "    \n",
+    "    def _clip_frames(self, frames):\n",
+    "        \"\"\"Clip the video frames to a fixed number of frames `max_frames`.\"\"\"\n",
+    "        # If the video has more frames than max_frames, clip it to the first `max_frames`\n",
+    "        if len(frames) > self.max_frames:\n",
+    "            return frames[:self.max_frames]\n",
+    "        \n",
+    "        # If the video has fewer frames than `max_frames`, pad with zeros\n",
+    "        pad_size = self.max_frames - len(frames)\n",
+    "        pad_frames = torch.zeros((pad_size, *frames.shape[1:]))  # Create padding frames with same size\n",
+    "        frames = torch.cat([frames, pad_frames], dim=0)\n",
+    "        \n",
+    "        return frames\n",
+    "    \n",
+    "    def _sample_frames(self, frames):\n",
+    "        \"\"\"Sample n number of frames from cliped video\"\"\"\n",
+    "        if len(frames) > self.n_frames:\n",
+    "            indices = torch.linspace(0, len(frames)-1, steps=self.n_frames).long()\n",
+    "            frames = frames[indices]  \n",
+    "        \n",
+    "        return frames\n",
     "\n",
     "\n",
     "# Preprocessing function (based on RAFT's input expectations)\n",
@@ -1101,31 +1132,34 @@
     "\n",
     "preprocess = T.Compose([\n",
     "    T.ConvertImageDtype(torch.float32),\n",
-    "    T.Resize([496, 888]),\n",
+    "    T.Normalize(mean=(0.43216, 0.394666, 0.37645),\n",
+    "                std=(0.22803, 0.22145, 0.216989)),\n",
+    "    T.Resize([256, 256]),\n",
     "])\n",
     "\n",
-    "def preprocess_frame(frame):\n",
-    "    return preprocess(frame).unsqueeze(0)  # Preprocess and add batch dimension\n",
+    "# def preprocess_frame(frame):\n",
+    "#     return preprocess(frame).unsqueeze(0)  # Preprocess and add batch dimension\n",
     "\n",
     "def process_single_video(video_path, model):\n",
     "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    \n",
     "    # Load the dataset\n",
-    "    dataset = VideoFrameDataset(video_path)\n",
-    "    data_loader = DataLoader(dataset, batch_size=6, shuffle=False, num_workers=0, pin_memory=True)\n",
+    "    dataset = VideoFrameDataset(video_path,preprocess)\n",
+    "    data_loader = DataLoader(dataset, batch_size=75, shuffle=False, num_workers=0, pin_memory=True)\n",
     "\n",
     "    # Initialize video writer\n",
-    "    fps = 30  # Adjust if needed\n",
+    "    fps = 15  # Adjust if needed\n",
     "    fourcc = cv2.VideoWriter_fourcc(*'MJPG')\n",
     "    # output_file = output_dir / (video_path.stem + '_flow.avi')\n",
     "    output_file = \"temp.avi\"\n",
-    "    out = cv2.VideoWriter(output_file, fourcc, fps, (888, 496))\n",
+    "    out = cv2.VideoWriter(output_file, fourcc, fps, (256, 256))\n",
     "\n",
     "    # Process video frames\n",
     "    for prev_frames, curr_frames in data_loader:\n",
     "        # Preprocess batches\n",
-    "        batch_prev_tensor = torch.stack([preprocess_frame(f).to(device) for f in prev_frames]).squeeze(1)\n",
-    "        batch_curr_tensor = torch.stack([preprocess_frame(f).to(device) for f in curr_frames]).squeeze(1)\n",
+    "        batch_prev_tensor = torch.stack([f.unsqueeze(0).to(device) for f in prev_frames]).squeeze(1)\n",
+    "        batch_curr_tensor = torch.stack([f.unsqueeze(0).to(device) for f in curr_frames]).squeeze(1)\n",
+    "        # print(batch_prev_tensor.shape)\n",
     "\n",
     "        with torch.no_grad(): \n",
     "            with torch.autocast(device_type=\"cuda\"):\n",
@@ -1154,10 +1188,14 @@
     "    output_container = av.open(output_file, mode='w')\n",
     "\n",
     "    # Set codec for the output video stream (e.g., H.264)\n",
-    "    output_stream = output_container.add_stream('h264', rate=30)  # 30 fps\n",
+    "    output_stream = output_container.add_stream('h264', rate=15)  # 30 fps\n",
     "\n",
     "    # Set the bitrate for compression\n",
     "    output_stream.bit_rate = target_bitrate  # Bitrate in bits per second\n",
+    "\n",
+    "    # Set the resolution of the output video stream based on the input stream\n",
+    "    output_stream.width = 256\n",
+    "    output_stream.height = 256\n",
     "\n",
     "    for frame in input_container.decode(video=0):\n",
     "        # Re-encode the frames to the output video stream\n",
@@ -1191,7 +1229,7 @@
     "folder_path = Path('H:/Datasets/Test')\n",
     "output_dir = Path('H:/Datasets/output_flow_videos')\n",
     "\n",
-    "process_videos_in_folder(folder_path, model, output_dir)"
+    "process_videos_in_folder(folder_path, model, output_dir) # 3.8s per video"
    ]
   }
  ],
