results for the presentation

--- a/s3d.ipynb
+++ b/s3d.ipynb
@@ -842,6 +842,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training size: 414\n",
+      "Validation size: 104\n",
+      "Input Shape: torch.Size([5, 3, 150, 256, 256])\n",
+      "label Shape: torch.Size([5])\n",
+      "Epoch 1/15\n",
+      "83/83 - Time Taken: 7.863010617097219 - train_loss: 0.6695 - train_accuracy: 64.0097% - val_loss: 0.6371 - val_accuracy: 68.2692%\n",
+      "Epoch 2/15\n",
+      "83/83 - Time Taken: 7.473371533552806 - train_loss: 0.6102 - train_accuracy: 65.7005% - val_loss: 0.6645 - val_accuracy: 68.2692%\n",
+      "Epoch 3/15\n",
+      "83/83 - Time Taken: 7.978231370449066 - train_loss: 0.5769 - train_accuracy: 69.8068% - val_loss: 0.6873 - val_accuracy: 68.2692%\n",
+      "Epoch 4/15\n",
+      "83/83 - Time Taken: 7.86268583536148 - train_loss: 0.5523 - train_accuracy: 71.7391% - val_loss: 0.7038 - val_accuracy: 67.3077%\n",
+      "Epoch 5/15\n",
+      "83/83 - Time Taken: 7.607266898949941 - train_loss: 0.5322 - train_accuracy: 72.4638% - val_loss: 0.7085 - val_accuracy: 67.3077%\n",
+      "Epoch 6/15\n",
+      "83/83 - Time Taken: 7.823669620354971 - train_loss: 0.5218 - train_accuracy: 73.4300% - val_loss: 0.7133 - val_accuracy: 68.2692%\n",
+      "Epoch 7/15\n",
+      "83/83 - Time Taken: 7.821432507038116 - train_loss: 0.5041 - train_accuracy: 73.9130% - val_loss: 0.7184 - val_accuracy: 68.2692%\n",
+      "Epoch 8/15\n",
+      "83/83 - Time Taken: 7.742730430761973 - train_loss: 0.4936 - train_accuracy: 75.3623% - val_loss: 0.7241 - val_accuracy: 68.2692%\n",
+      "Epoch 9/15\n",
+      "83/83 - Time Taken: 7.715534436702728 - train_loss: 0.4850 - train_accuracy: 75.6039% - val_loss: 0.7370 - val_accuracy: 68.2692%\n",
+      "Epoch 10/15\n",
+      "83/83 - Time Taken: 8.209038849671682 - train_loss: 0.4746 - train_accuracy: 76.0870% - val_loss: 0.7464 - val_accuracy: 68.2692%\n",
+      "Epoch 11/15\n",
+      "83/83 - Time Taken: 8.113072129090627 - train_loss: 0.4670 - train_accuracy: 77.0531% - val_loss: 0.7556 - val_accuracy: 68.2692%\n",
+      "Epoch 12/15\n",
+      "83/83 - Time Taken: 8.136986656983693 - train_loss: 0.4598 - train_accuracy: 77.5362% - val_loss: 0.7579 - val_accuracy: 68.2692%\n",
+      "Epoch 13/15\n",
+      "83/83 - Time Taken: 7.870969092845916 - train_loss: 0.4510 - train_accuracy: 78.5024% - val_loss: 0.7628 - val_accuracy: 68.2692%\n",
+      "Epoch 14/15\n",
+      "83/83 - Time Taken: 8.173083635171254 - train_loss: 0.4432 - train_accuracy: 78.2609% - val_loss: 0.7719 - val_accuracy: 68.2692%\n",
+      "Epoch 15/15\n",
+      "83/83 - Time Taken: 8.114362219969431 - train_loss: 0.4334 - train_accuracy: 78.2609% - val_loss: 0.7759 - val_accuracy: 69.2308%\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_path = \"data\"\n",
+    "batch_size = 5\n",
+    "epochs = 15\n",
+    "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.8GB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_path = \"data\"\n",
+    "batch_size = 5\n",
+    "epochs = 5\n",
+    "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.8GB"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -903,36 +970,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unfreeze & Scaled weights using SGD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training size: 414\n",
-      "Validation size: 104\n",
-      "Input Shape: torch.Size([2, 3, 150, 256, 256])\n",
-      "label Shape: torch.Size([2])\n",
-      "Epoch 1/5\n",
-      "207/207 - Time Taken: 11.519758526484171 - train_loss: 0.9092 - train_accuracy: 59.9034% - val_loss: 0.6062 - val_accuracy: 72.1154%\n",
-      "Epoch 2/5\n",
-      "207/207 - Time Taken: 12.563840623696645 - train_loss: 0.5886 - train_accuracy: 68.1159% - val_loss: 0.8558 - val_accuracy: 70.1923%\n",
-      "Epoch 3/5\n"
-     ]
-    }
-   ],
-   "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "dataset_path = \"data\"\n",
-    "batch_size = 2\n",
-    "epochs = 5\n",
-    "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.5GB lr=1e-2, momentum=0.9,weight_decay=1e-6"
+    "### Unfreeze & Scaled weights using AdamW"
    ]
   },
   {
@@ -951,13 +989,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0.6998144680836115, 0.6280193236714976)]\n",
-      "[(0.7193568689482552, 0.4326923076923077)]\n"
+      "[(0.6694552837366081, 0.6400966183574879), (0.610200483755893, 0.6570048309178744), (0.576902607119227, 0.6980676328502415), (0.5523116870457867, 0.717391304347826), (0.5321993533387241, 0.7246376811594203), (0.5217883576111622, 0.7342995169082126), (0.5041063594889929, 0.7391304347826086), (0.4935529056083725, 0.7536231884057971), (0.4849736855690738, 0.7560386473429952), (0.4745837094553982, 0.7608695652173914), (0.4669630624443652, 0.7705314009661836), (0.45980198340243605, 0.7753623188405797), (0.4509757545339056, 0.785024154589372), (0.44316269529153063, 0.782608695652174), (0.43343773663762103, 0.782608695652174)]\n",
+      "[(0.6370820488248553, 0.6826923076923077), (0.6644955618040902, 0.6826923076923077), (0.6872773695559729, 0.6826923076923077), (0.7037850575787681, 0.6730769230769231), (0.7084992967900776, 0.6730769230769231), (0.7133321095080603, 0.6826923076923077), (0.7184041369528997, 0.6826923076923077), (0.7241292368798029, 0.6826923076923077), (0.7370198581899915, 0.6826923076923077), (0.74636462472734, 0.6826923076923077), (0.7555504221291769, 0.6826923076923077), (0.7579325380779448, 0.6826923076923077), (0.7627764017809004, 0.6826923076923077), (0.7718970825274786, 0.6826923076923077), (0.7759193054267338, 0.6923076923076923)]\n"
      ]
     }
    ],
    "source": [
-    "path = \"s3d_rgb_best.pth\"\n",
+    "path = \"s3d_rgb_last.pth\"\n",
     "\n",
     "# replace final layer with new one with appropriate num of classes\n",
     "# model = s3d(weights=S3D_Weights.DEFAULT)\n",
