Fixed weight scaling factor

--- a/s3d.ipynb
+++ b/s3d.ipynb
@@ -897,14 +897,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training size: 414\n",
+      "Validation size: 104\n",
+      "Input Shape: torch.Size([5, 3, 150, 256, 256])\n",
+      "label Shape: torch.Size([5])\n",
+      "Epoch 1/5\n",
+      "83/83 - Time Taken: 8.304679270585378 - train_loss: 0.5962 - train_accuracy: 64.9758% - val_loss: 0.6019 - val_accuracy: 62.5000%\n",
+      "Epoch 2/5\n",
+      "83/83 - Time Taken: 8.020596857865652 - train_loss: 0.5629 - train_accuracy: 67.1498% - val_loss: 0.6051 - val_accuracy: 62.5000%\n",
+      "Epoch 3/5\n",
+      "83/83 - Time Taken: 7.8207794547080995 - train_loss: 0.5386 - train_accuracy: 66.9082% - val_loss: 0.6095 - val_accuracy: 62.5000%\n",
+      "Epoch 4/5\n",
+      "83/83 - Time Taken: 8.135789414246878 - train_loss: 0.5198 - train_accuracy: 68.5990% - val_loss: 0.6145 - val_accuracy: 62.5000%\n",
+      "Epoch 5/5\n",
+      "83/83 - Time Taken: 8.066654491424561 - train_loss: 0.5054 - train_accuracy: 68.3575% - val_loss: 0.6187 - val_accuracy: 62.5000%\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "dataset_path = \"data\"\n",
     "batch_size = 5\n",
-    "epochs = 5\n",
+    "epochs = 15\n",
     "train_log, val_log = train_s3d(dataset_path,batch_size,device,epochs) # 7.8GB"
    ]
   },
