- generated the optical flow dataset - tried to use hdf5 (not suitable)

--- a/optical_flow_convert.ipynb
+++ b/optical_flow_convert.ipynb
@@ -1060,22 +1060,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing video: H:\\Datasets\\Test\\00000.mp4\n",
-      "Video compressed successfully to: H:\\Datasets\\output_flow_videos\\00000_flow.mp4\n",
-      "Processing video: H:\\Datasets\\Test\\00001.mp4\n",
-      "Video compressed successfully to: H:\\Datasets\\output_flow_videos\\00001_flow.mp4\n",
-      "Processing video: H:\\Datasets\\Test\\00002.mp4\n",
-      "Video compressed successfully to: H:\\Datasets\\output_flow_videos\\00002_flow.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Custom Dataset class for video frames\n",
     "class VideoFrameDataset(Dataset):\n",
@@ -1210,24 +1197,30 @@
     "    input_container.close()\n",
     "    output_container.close()\n",
     "\n",
-    "    print(f\"Video compressed successfully to: {output_file}\")\n",
+    "    # print(f\"Video compressed successfully to: {output_file}\")\n",
     "\n",
     "def process_videos_in_folder(folder_path, model, output_dir):\n",
     "    video_paths = sorted(Path(folder_path).glob('*.mp4'))  # Assumes .mp4, adjust if necessary\n",
     "    output_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    for video_path in video_paths:\n",
-    "        print(f\"Processing video: {video_path}\")\n",
+    "        # print(f\"Processing video: {video_path}\")\n",
     "        process_single_video(video_path, model)\n",
     "\n",
     "        # Optionally compress the video after processing\n",
     "        input_vid = \"temp.avi\"\n",
-    "        compressed_output_file = output_dir / (video_path.stem + '_flow.mp4')\n",
+    "        compressed_output_file = output_dir / (video_path.stem + '.mp4')\n",
     "        compress_video(input_vid, compressed_output_file, target_bitrate=1500000)\n",
     "\n",
     "\n",
-    "folder_path = Path('H:/Datasets/Test')\n",
-    "output_dir = Path('H:/Datasets/output_flow_videos')\n",
+    "# folder_path = Path('H:/Datasets/maliciousai/data/Celeb-DF-v2/YouTube-real')\n",
+    "# output_dir = Path('H:/Datasets/maliciousai/data/Celeb-DF-v2-Flow/YouTube-real')\n",
+    "\n",
+    "# folder_path = Path('H:/Datasets/maliciousai/data/Celeb-DF-v2/Celeb-real')\n",
+    "# output_dir = Path('H:/Datasets/maliciousai/data/Celeb-DF-v2-Flow/Celeb-real')\n",
+    "\n",
+    "folder_path = Path('H:/Datasets/maliciousai/data/Celeb-synthesis')\n",
+    "output_dir = Path('H:/Datasets/maliciousai/data/Celeb-DF-v2-Flow/Celeb-synthesis')\n",
     "\n",
     "process_videos_in_folder(folder_path, model, output_dir) # 3.8s per video"
    ]
