- discussed points from meeting

--- a/s3d.ipynb
+++ b/s3d.ipynb
@@ -36,11 +36,30 @@
     "# Resolved 7. not whole dataset is used currently only testing samples\n",
     "# Resolved 8. save logged results in pth file\n",
     "# 9. test adamw\n",
+    "# 10. print running loss & acc since using less epochs\n",
+    "# - save batch results as 2d array\n",
+    "# - save batch results into model file\n",
+    "# 11. train optical flow model - Nic\n",
+    "# 12. ensemble learning - Alex\n",
+    "# 13. plot results - Nic\n",
+    "# 14. confusion matrix - Alex\n",
     "\n",
     "# optical flow\n",
     "# Resolved 1. resize to 256,256\n",
     "# Resolved 2. limit frames to 10s\n",
     "# Resolved 3. sample using interval 15 frames per 1s = 150 frames"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Milestone 3\n",
+    "* Colab / report in colab\n",
+    "* Video\n",
+    "\n",
+    "## Milestone 4\n",
+    "* Individual report"
    ]
   },
   {
